Feedback from Kasra

--- a/talks/quantifiedself.html
+++ b/talks/quantifiedself.html
@@ -63,17 +63,15 @@
                     <p>Everything I care about lives in my pocket.</p>
                     <ul class="grid">
                         <li><img src="images/qs/myfitnesspal.jpg" title="MyFitnessPal" /><br />Nutrition</li>
-                        <li><img src="images/qs/fitocracy.jpg" title="Fitocracy" /><br />
-                        Strength</li>
+                        <li><img src="images/qs/fitocracy.jpg" title="Fitocracy" /><br />Strength</li>
                         <li><img src="images/qs/untappd.jpg" title="Untappd" /><br />BEER!<li>
                         <li><img src="images/qs/coffee.jpg" title="Coffee by Jawbone" /><br /> Coffee</li>
                         <li><img src="images/qs/goodreads.jpg" title="Goodreads" /><br />Books<li>
                         <li><img src="images/qs/pocket.jpg" title="Pocket" /><br />Articles</li>
                         <li><img src="images/qs/foursquare.jpg" title="Foursquare" /><br />Places</li>
                         <li><img src="images/qs/strava.jpg" title="Strava" /><br />Rides</li>
-                        <li><img src="images/qs/up.jpg" title="Jawbone"
-                        width="154" height="154" /><br />Steps &<br/> Zzzs</li>
-                        <li><img src="images/qs/hypem.jpg" title="Hype Machine" /><br />Jams</li>
+                        <li><img src="images/qs/up.jpg" title="Jawbone" /><br />Steps &<br/> Zzzs</li>
+                        <li><img src="images/qs/hypem.jpg" title="Hype Machine" width="154" height="154" /><br />Jams</li>
                     </ul>
                     <aside class="notes">
                         <ol>
@@ -122,10 +120,8 @@
                         </ul>
                         <li>Tracked biometrics with a plain ol' spreadsheet</li>
                         <ul>
-                            <li>Pounds</li>
-                            <li>Body fat</li>
-                            <li>Tape measurements</li>
-                            <li>Clothing</li>
+                            <li>Pounds, body fat %, tape measurements, clothing
+                            sizes</li>
                         </ul>
                         <li>Nutrition is #1</li>
                         <ul>
@@ -238,7 +234,7 @@
                     No immediate plans or concerns...
                 </section>
 				 <section>
-                    <h1>But I am curious about...</h1>
+                     <h1>Curious cat</h1>
                     <ul>
                         <li>Effects of caffeine on deep sleep</li>
                         <li>My optimal sleep levels for strength</li>
@@ -246,8 +242,13 @@
                         <li>Macronutrient levels and quality of sleep</li>
                     </ul>
                 </section>
+                <section>
+                        <img src="images/qs/up_insight_01.png" alt="insight about activity and sleep" />
+                        <img src="images/qs/up_insight_02.png" alt="insight about sound sleep and calories consumed" />
+                        <img src="images/qs/up_insight_03.png" alt="insight about coffee consumption" />
+                </section>
 				 <section>
-                    <h1>Looking back...</h1>
+                    <h1>Future Insights</h1>
                     <p>Eventually, I want to visualize questions like:</p>
                     <ul>
                         <li>What are the top foods I ate per season?</li>
