--- a/talks/quantifiedself.html
+++ b/talks/quantifiedself.html
@@ -71,7 +71,7 @@
                         <li><img src="images/qs/foursquare.jpg" title="Foursquare" /><br />Places</li>
                         <li><img src="images/qs/strava.jpg" title="Strava" /><br />Rides</li>
                         <li><img src="images/qs/up.jpg" title="Jawbone" /><br />Steps &<br/> Zzzs</li>
-                        <li><img src="images/qs/hypem.jpg" title="Hype Machine" width="154" height="154" /><br />Jams</li>
+                        <li><img src="images/qs/hypem.jpg" title="Hype Machine" /><br />Jams</li>
                     </ul>
                     <aside class="notes">
                         <ol>
@@ -233,14 +233,19 @@
                     <h1>Future Plans</h1>
                     No immediate plans or concerns...
                 </section>
-				 <section>
+				 <section class="columnized">
                      <h1>Curious cat</h1>
-                    <ul>
-                        <li>Effects of caffeine on deep sleep</li>
-                        <li>My optimal sleep levels for strength</li>
-                        <li>Total calories and the effect on sound sleep</li>
-                        <li>Macronutrient levels and quality of sleep</li>
-                    </ul>
+                     <aside>
+                         <img src="images/qs/curious_cat.jpg" alt="curious cat" />
+                     </aside>
+                     <article>
+                         <ul>
+                             <li>What are the effects of caffeine on deep sleep?</li>
+                             <li>What are my optimal sleep levels for strength?</li>
+                             <li>Total calories and the effect on sound sleep</li>
+                             <li>Macronutrient levels and quality of sleep</li>
+                         </ul>
+                     </article>
                 </section>
                 <section>
                         <img src="images/qs/up_insight_01.png" alt="insight about activity and sleep" />
