--- a/talks/quantifiedself.html
+++ b/talks/quantifiedself.html
@@ -102,9 +102,10 @@
                     began to drop.</p>
 
                     <ul class="grid">
-                        <li class="two"><img src="images/qs/me2010.jpg" alt="Me in
+                        <li class="two">Summer 2010<img src="images/qs/me2010.jpg" alt="Me in
                         2010"/></li>
-                        <li class="two"><img src="images/qs/me2013.jpg" width="66%" height="66%" alt="Me Summer 2013" /></li>
+                        <li class="two">Summer 2013<br /><img src="images/qs/me2013.jpg"
+                        width="60%" height="60%" alt="Me Summer 2013" /></li>
                     </ul>
                     <aside class="notes">Serendipitously
                         <br />
@@ -247,14 +248,14 @@
                          </ul>
                      </article>
                 </section>
-                <section>
+                <section class="three">
                         <img src="images/qs/up_insight_01.png" alt="insight about activity and sleep" />
                         <img src="images/qs/up_insight_02.png" alt="insight about sound sleep and calories consumed" />
                         <img src="images/qs/up_insight_03.png" alt="insight about coffee consumption" />
                 </section>
 				 <section>
                     <h1>Future Insights</h1>
-                    <p>Eventually, I want to visualize questions like:</p>
+                    <p>Eventually, I want to answer questions like:</p>
                     <ul>
                         <li>What are the top foods I ate per season?</li>
                         <li>What are the types of businesses I visit the most (per region, over time, etc)</li>
