Break out some slides

--- a/talks/quantifiedself.html
+++ b/talks/quantifiedself.html
@@ -124,19 +124,23 @@
                             <li>Pounds, body fat %, tape measurements, clothing
                             sizes</li>
                         </ul>
-                        <li>Nutrition is #1</li>
-                        <ul>
-                            <li>Tweaked calorie and macronutrient levels</li>
-                            <ul>
-                                <li>Low carb, high protein, moderate fats</li>
-                                <li>High carb, moderate protein, moderate fats</li>
-                                <li>Macronutrient timing</li>
-                            </ul>
-                        </ul>
-                        <li>Trends in data over time drove me to iterate on process to maintain progress</li>
                     </ul>
                 </section>
-				 <section>
+                <section>
+                    <h1>Most importantly...</h1>
+                    <h3>Nutrition is #1</h3>
+                    <ul>
+                        <li>Tweaked calorie and macronutrient levels</li>
+                        <ul>
+                            <li>Low carb, high protein, moderate fats</li>
+                            <li>High carb, moderate protein, moderate fats</li>
+                            <li>Macronutrient timing</li>
+                        </ul>
+                    </ul>
+                    <p>Trends in data over time drove me to iterate on
+                    process to maintain progress</p>
+                </section>
+                <section>
                     <h1>Learned my limits</h1>
                     <p>Eat less, move more? …not always the best</p>
                         <span class="caution"><b>Proceed with caution!</b></span>
@@ -265,7 +269,7 @@
                 </section>
                 <section>
                     <h1>Q & A</h1>
-                    Tweet me your gym selfies? <br />Food porn?
+                    Tweet me your gym selfies? <br />Food porn?<br /><br />
                     <a href="http://twitter.com/pmocampo">@pmocampo</a>
                 </section>
 			</div>
