--- a/index.html
+++ b/index.html
@@ -2,9 +2,19 @@
 layout: default
 title: poco a poco
 ---
-
 <div id="home">
-  <h1>Words</h1>
+    <div class="large-12 columns">
+        <img src="images/background.jpg">
+    </div>
+  <h1>Whoa.</h1>
+  <div class="large-12 columns">
+      <h4> Yo soy Pamela Ocampo. </h4>
+      I'm a busy-body full-stack developer living in San Francisco, CA.
+      Lady lifter, coffee geek, and ice cream gourmand. I think everyone should ride a bike. 
+      Learning is my motivation. Check back in the future and maybe I can teach you a thing or two.
+  </div>
+  <hr>
+  <h2>Words</h2>
   <ul class="posts">
     {% for post in site.posts %}
       <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
