--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: poco a poco
     <div class="large-12 columns">
         <img src="images/background.jpg">
     </div>
-  <h1>Whoa.</h1>
+  <h1 class="subheader">Whoa.</h1>
   <div class="large-12 columns">
       <h4> Yo soy Pamela Ocampo. </h4>
       I'm a busy-body full-stack developer living in San Francisco, CA.
