--- a/about.html
+++ b/about.html
@@ -6,11 +6,18 @@ title: About
     <article>
         <h1>Whoa.</h1>
         <h2>My name is Pamela Ocampo</p>
+            <div class="row">
+                <img src="images/hipster.jpg" class="medium-4 columns">
+                <img src="images/coffeegeek.jpg" class="medium-4 columns">
+                <img src="images/icecream.jpg" class="medium-4 columns end">
+            </div>
             <p><span>I'm a busy-body, full-stack application developer living in the <a href="http://www.missionmission.org/" alt="Mission Mission blog" target="_blank">Mission District</a> of San Francisco, CA.</span>
             I identify myself as a lady lifter, coffee geek, and ice cream gourmand with strong hipster tendencies. I prefer vim keybindings over emacs and protein over the other two macronutrients.
             </p>
-            <p>When I'm not <a href="http://linkedin.com/in/pmocampo/" alt="LinkedIn" target="_blank">"writing the codes"</a>, I like to be outside riding my fixed gear bike to a destination, pretending I know how to climb rocks, people-watching, or photographing street life.</p>
-            <p>I'm driven to learn and get excited when I have the opportunity to teach someone a new skill.
-            </p>
+            <p>When I'm not <a href="http://linkedin.com/in/pmocampo/" alt="LinkedIn" target="_blank">"writing the codes"</a>, I like to be outside riding my fixed gear bike to a destination, pretending I know how to climb rocks, people-watching, or taking photos of street life.</p>
+            <p>I'm driven to learn and get excited when I have the opportunity to teach someone a new skill. </p>
+            <div class="row">
+                <img src="images/climbing.jpg" class="large-12 columns">
+            </div>
     </article>
 </div>
