Added h-card class to representative url

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@ layout: default
 title: About
 ---
 <div id="about" class="h-card">
-    <link rel="me" href="https://likescoffee.com" />
+    <link rel="me" class="u-url" href="https://likescoffee.com" />
     <article>
         <h1>Whoa.</h1>
         <h2>My name is <span class="p-name">Pamela Ocampo</span></p>
