--- a/about.html
+++ b/about.html
@@ -4,24 +4,22 @@ title: About
 ---
 <div id="about" class="h-card">
     <link rel="me" class="u-url u-uid url" href="https://likescoffee.com" />
-    <article>
-        <h1>Whoa.</h1>
-        <h2>My name is <span class="p-name">Pamela Ocampo</span></p>
-            <div class="row">
-                <img src="images/hipster.jpg" class="medium-4 columns u-photo">
-                <img src="images/coffeegeek.jpg" class="medium-4 columns u-photo">
-                <img src="images/icecream.jpg" class="medium-4 columns end u-photo">
-            </div>
-            <div class="p-note">
-            <p><span>I'm a busy-body, <span class="p-job-title">full-stack application developer</span> living in the <a href="http://www.missionmission.org/" alt="Mission Mission blog" target="_blank">Mission District</a> of <span class="p-locality">San Francisco, CA.</span></span>
-            I identify myself as a lady lifter, coffee geek, and ice cream gourmand with strong hipster tendencies. I prefer vim keybindings over emacs and protein over the other two macronutrients.
-            </p>
-            <p>When I'm not <a href="http://linkedin.com/in/pmocampo/" alt="LinkedIn" target="_blank">"writing the codes"</a>, I like to be outside riding my fixed gear bike to a destination, pretending I know how to climb rocks, people-watching, or taking photos of street life.</p>
-            <p>I'm driven to learn and get excited when I have the opportunity to teach someone a new skill. </p>
-            </div>
-            <div class="row">
-                <img src="images/climbing.jpg" class="large-12 columns u-photo">
-            </div>
-            Wanna contact me? Shoot me an <a href="mailto:pamela.ocampo@gmail.com" class="u-email">email</a>
-    </article>
+    <h1>Whoa.</h1>
+    <h2>My name is <span class="p-name">Pamela Ocampo</span></h2>
+    <div class="row">
+	<img src="images/hipster.jpg" class="medium-4 columns u-photo">
+	<img src="images/coffeegeek.jpg" class="medium-4 columns u-photo">
+	<img src="images/icecream.jpg" class="medium-4 columns end u-photo">
+    </div>
+    <div>
+	<p><span>I'm a busy-body, <span class="p-job-title">full-stack application developer</span> living in the <a href="http://www.missionmission.org/" alt="Mission Mission blog" target="_blank">Mission District</a> of <span class="p-locality">San Francisco, CA.</span></span>
+	I identify myself as a lady lifter, coffee geek, and ice cream gourmand with strong hipster tendencies. I prefer vim keybindings over emacs and protein over the other two macronutrients.
+	</p>
+	<p>When I'm not <a href="http://linkedin.com/in/pmocampo/" alt="LinkedIn" target="_blank">"writing the codes"</a>, I like to be outside riding my fixed gear bike to a destination, pretending I know how to climb rocks, people-watching, or taking photos of street life.</p>
+	<p>I'm driven to learn and get excited when I have the opportunity to teach someone a new skill. </p>
+    </div>
+    <div class="row">
+	<img src="images/climbing.jpg" class="large-12 columns u-photo">
+    </div>
+    Wanna contact me? Shoot me an <a href="mailto:pamela.ocampo@gmail.com" class="u-email">email</a>
 </div>
