--- a/about.html
+++ b/about.html
@@ -2,14 +2,14 @@
 layout: default
 title: About
 ---
-<div id="about" class="h-card">
+<div class="about" class="h-card">
     <link rel="me" class="u-url u-uid url" href="https://likescoffee.com" />
     <h1>Whoa.</h1>
     <h2>My name is <span class="p-name">Pamela Ocampo</span></h2>
-    <div class="row">
-	<img src="images/hipster.jpg" class="medium-4 columns u-photo">
-	<img src="images/coffeegeek.jpg" class="medium-4 columns u-photo">
-	<img src="images/icecream.jpg" class="medium-4 columns end u-photo">
+    <div class="about__photoHeader">
+	<img src="images/hipster.jpg" class="u-photo">
+	<img src="images/coffeegeek.jpg" class="u-photo">
+	<img src="images/icecream.jpg" class="u-photo">
     </div>
     <div>
 	<p><span>I'm a busy-body, <span class="p-job-title">full-stack application developer</span> living in the <a href="http://www.missionmission.org/" alt="Mission Mission blog" target="_blank">Mission District</a> of <span class="p-locality">San Francisco, CA.</span></span>
@@ -18,8 +18,8 @@ title: About
 	<p>When I'm not <a href="http://linkedin.com/in/pmocampo/" alt="LinkedIn" target="_blank">"writing the codes"</a>, I like to be outside riding my fixed gear bike to a destination, pretending I know how to climb rocks, people-watching, or taking photos of street life.</p>
 	<p>I'm driven to learn and get excited when I have the opportunity to teach someone a new skill. </p>
     </div>
-    <div class="row">
-	<img src="images/climbing.jpg" class="large-12 columns u-photo">
+    <p>Wanna contact me? Shoot me an <a href="mailto:pamela.ocampo@gmail.com" class="u-email">email</a></p>
+    <div class="about__photoFooter">
+	<img src="images/climbing.jpg" class="u-photo">
     </div>
-    Wanna contact me? Shoot me an <a href="mailto:pamela.ocampo@gmail.com" class="u-email">email</a>
 </div>
