General spacing updates

--- a/about.html
+++ b/about.html
@@ -4,8 +4,8 @@ title: About
 ---
 <div class="about" class="h-card">
     <link rel="me" class="u-url u-uid url" href="https://likescoffee.com" />
-    <h1>Whoa.</h1>
-    <h2>My name is <span class="p-name">Pamela Ocampo</span></h2>
+    <h2>Whoa.</h2>
+    <h3>My name is <span class="p-name">Pamela Ocampo</span></h3>
     <div class="about__photoHeader">
 	<img src="images/hipster.jpg" class="u-photo">
 	<img src="images/coffeegeek.jpg" class="u-photo">
@@ -17,8 +17,8 @@ title: About
 	</p>
 	<p>When I'm not <a href="http://linkedin.com/in/pmocampo/" alt="LinkedIn" target="_blank">"writing the codes"</a>, I like to be outside riding my fixed gear bike to a destination, pretending I know how to climb rocks, people-watching, or taking photos of street life.</p>
 	<p>I'm driven to learn and get excited when I have the opportunity to teach someone a new skill. </p>
+	<p>Wanna contact me? Shoot me an <a href="mailto:pamela.ocampo@gmail.com" class="u-email">email</a> or find me on your social network of choice.</p>
     </div>
-    <p>Wanna contact me? Shoot me an <a href="mailto:pamela.ocampo@gmail.com" class="u-email">email</a></p>
     <div class="about__photoFooter">
 	<img src="images/climbing.jpg" class="u-photo">
     </div>
