--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Pamela Ocampo
 ---
 <div id="home">
-    <img class="site__cover" src="images/background-500.jpg" srcset="images/background-500.jpg 1000w, images/background.jpg 2000w">
+    <img class="site__cover" src="images/background-small.jpg" srcset="images/background-small.jpg 1000w, images/background.jpg 2000w">
     <h2>Words</h2>
     {% for post in site.posts %}
     <div class="postDescription">
